objects/Public_Knowledge_Base_Design__c.object
<CustomObject>
    <fields>
        <fullName>Body_BG_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <label>Body BG Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Font_Color__c</fullName>
        <defaultValue>&quot;#333333&quot;</defaultValue>
        <label>Body Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>action_color__c</fullName>
        <defaultValue>&quot;#1796bf&quot;</defaultValue>
        <label>action color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ahref_color__c</fullName>
        <defaultValue>&quot;#015BA7&quot;</defaultValue>
        <label>ahref color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_article_div_data_Color__c</fullName>
        <defaultValue>&quot;#777777&quot;</defaultValue>
        <label>div.article div.data Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_body_BG_Color__c</fullName>
        <defaultValue>&quot;#fafbfb&quot;</defaultValue>
        <label>div#body BG Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_body_Border_Color__c</fullName>
        <defaultValue>&quot;#e8e9e9&quot;</defaultValue>
        <label>div#body Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_feedbackDialog_Border_Color__c</fullName>
        <defaultValue>&quot;#8acde0&quot;</defaultValue>
        <label>div#feedbackDialog Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_narrowSearch_Border_Color__c</fullName>
        <defaultValue>&quot;#eeeeee&quot;</defaultValue>
        <label>div.narrowSearch Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_right_column_BG_Color__c</fullName>
        <defaultValue>&quot;#ffffff&quot;</defaultValue>
        <label>div#right_column BG Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_right_column_Border_Color__c</fullName>
        <defaultValue>&quot;#e8e9e9&quot;</defaultValue>
        <label>div#right_column Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_selectedArticle_Background_Color__c</fullName>
        <defaultValue>&quot;#d8f1f9&quot;</defaultValue>
        <label>div.selectedArticle Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>div_selectedArticle_Border_Color__c</fullName>
        <defaultValue>&quot;#42a1bd&quot;</defaultValue>
        <label>div.selectedArticle Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>h2_section_Border_Color__c</fullName>
        <defaultValue>&quot;#eeeeee&quot;</defaultValue>
        <label>h2.section Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>h2_section_Color__c</fullName>
        <defaultValue>&quot;#333333&quot;</defaultValue>
        <label>h2.section Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>knowledgeTOCRendererSection_BG_Color__c</fullName>
        <defaultValue>&quot;#E4E4E4&quot;</defaultValue>
        <label>.knowledgeTOCRendererSection BG Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>knowledgeTOCRendererSection_selected_BG__c</fullName>
        <defaultValue>&quot;#3F44AF&quot;</defaultValue>
        <label>.knowledgeTOCRendererSection.selected BG</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>knowledgeTOCRendererSection_selected_FC__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <label>.knowledgeTOCRendererSection.selected FC</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>knowledgeTOCRendererSections_BG_Color__c</fullName>
        <defaultValue>&quot;#E7E8EC&quot;</defaultValue>
        <label>knowledgeTOCRendererSections BG Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>knowledgeTOCRendererSections_color__c</fullName>
        <defaultValue>&quot;#333333&quot;</defaultValue>
        <label>knowledgeTOCRendererSections color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>searchAskInputContainer_Border_Color__c</fullName>
        <defaultValue>&quot;#8DCDE2&quot;</defaultValue>
        <label>#searchAskInputContainer Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>searchAskInputContainer_shadow_Color__c</fullName>
        <defaultValue>&quot;#85a6b0&quot;</defaultValue>
        <label>#searchAskInputContainer shadow Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sectionName_BG_Color__c</fullName>
        <defaultValue>&quot;#989898&quot;</defaultValue>
        <label>sectionName BG Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sectionName_selected_BGColor__c</fullName>
        <defaultValue>&quot;#6B70C5&quot;</defaultValue>
        <label>.sectionName.selected BGColor</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sectionName_selected_td_color__c</fullName>
        <defaultValue>&quot;#333333&quot;</defaultValue>
        <label>.sectionName.selected td color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sectionName_td_color__c</fullName>
        <defaultValue>&quot;#333333&quot;</defaultValue>
        <label>.sectionName td color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>select_language_Border_Color__c</fullName>
        <defaultValue>&quot;#8ac7d7&quot;</defaultValue>
        <label>select.language Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>textarea_default_color__c</fullName>
        <defaultValue>&quot;#D3D3D3&quot;</defaultValue>
        <label>textarea.default color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>PKB Design</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Public Knowledge Base Design Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PKB Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>